[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/blocks/breaking block_4.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/blocks/breaking block_3.png" type="Texture" id=2]
[ext_resource path="res://breaking block.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/blocks/breaking block_2.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/blocks/breaking block_7.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/blocks/breaking block_6.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/blocks/breaking block_5.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/blocks/breaking block_1.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "break",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ) ],
"loop": false,
"name": "revive",
"speed": 7.0
} ]

[node name="block" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Coll1" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -191, -124, 195, -124, 66, -20, -98, -20 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Coll0" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -218, -118, 225, -119, 224, 124, -217, 124 )

[connection signal="body_entered" from="." to="." method="_on_block_body_entered"]
